[package]
name = "bevy-testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enables optimization for better performance
[profile.dev]
opt-level = 1

[dependencies]
bevy = "0.10"
fastrand = "1.9.0"
# bevy-inspector-egui = "0.18.3"
# bevy_rapier2d = "0.21.0"

[build-dependencies]
embed-resource = "1.6.3"